MathML: Use large operators and fix alignment in "math" blocks.
Set displaystyle="true"  and class="align" for the outer ``<mtable>``¹
in math blocks.

¹ The "mtable"-wrapper is used to support multi-line formulas
  similar to the "align" environment in the "amsmath" LaTeX package.

Add CSS to left-align the table cells in "align"-emulating mtables.

Fixes part of bug #407.

git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@8738 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/docutils/writers/html5_polyglot/responsive.css
+++ b/docutils/docutils/writers/html5_polyglot/responsive.css
@@ -45,6 +45,7 @@ body > * {
 p, ol, ul, dl, li,
 div.line-block,
 div.topic,
+div > math,
 table {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
@@ -337,6 +338,12 @@ table.align-right {
 }
 .sidebar {
   width: 40%;
+}
+
+/* Math */
+/* for math-output=MathML (for math-output=HTML, see math.css) */
+mtable.align > mtr > mtd { /* emulate AMS "align" environment. */
+  text-align: left;   
 }
 
 /* Adaptive page layout */
